objects/LLC_BI__Covenant2__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field autopopulates to the first associated relationship on the covenant. Mainly used for reporting purposes.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Covenant Mgmt</relationshipLabel>
        <relationshipName>Covenant_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether a covenant is currently active or not.</description>
        <inlineHelpText>A covenant is automatically activated once a loan is booked and remains active until all the loans it is associated with have been paid out.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>Use this optional comments field to add any notes or instructions about the performance rules.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Compliance_Days_Prior__c</fullName>
        <description>This field is required and manually populated. This field should be set to the number of days prior to the (Covenant&apos;s) next evaluation date that a compliance record will be created.</description>
        <inlineHelpText>This field is required and populated based on the Frequency. This field sets the number of days prior to the Covenant&apos;s next evaluation date that a compliance record will be created.</inlineHelpText>
        <label>Compliance Days Prior</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Covenant Type</description>
        <inlineHelpText>Lookup to the Covenant Type</inlineHelpText>
        <label>Covenant Type</label>
        <referenceTo>LLC_BI__Covenant_Type__c</referenceTo>
        <relationshipName>Covenant2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_Past_Next_Evaluation__c</fullName>
        <description>This field is automatically calculated. Number of days past the Next Evaluation Date.  If Today is not past the evaluation date, then this returns 0.</description>
        <formula>IF( ISNULL(LLC_BI__Next_Evaluation_Date__c) || (Today() - LLC_BI__Next_Evaluation_Date__c &lt;= 0), Null , (Today() - LLC_BI__Next_Evaluation_Date__c))</formula>
        <inlineHelpText>Number of days past the Next Evaluation Date.</inlineHelpText>
        <label>Days Past Next Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_Until_Next_Evaluation__c</fullName>
        <description>This field is automatically calculated. Number of days until the Next Evaluation Date. If Today is not before the next evaluation date, then this returns 0.</description>
        <formula>IF( ISNULL(LLC_BI__Next_Evaluation_Date__c) || (LLC_BI__Next_Evaluation_Date__c - Today() &lt; 0) , Null, (LLC_BI__Next_Evaluation_Date__c - Today()))</formula>
        <inlineHelpText>Number of days until the Next Evaluation Date.</inlineHelpText>
        <label>Days Until Next Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Detail__c</fullName>
        <description>This field is optional and manually populated. Use this field to add details to the covenant.</description>
        <inlineHelpText>Use this field to add details to the covenant.</inlineHelpText>
        <label>Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Due_Date__c</fullName>
        <description>The system automatically populates this optional field with the covenant&apos;s original, non modified due date. Editing is not recommended unless extension applies permanently. By default, it is blank.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>This field is optional and is manually poulated. It identifies the statement date of a covenant&apos;s financial statement.</description>
        <inlineHelpText>Effective Date is the Date of the Statement</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Indicator_Value__c</fullName>
        <description>This field is required and manually populated. The value that is being confirmed with the financial indicator covenant. IE: DSC of at least 1.25</description>
        <label>Financial Indicator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency_Months__c</fullName>
        <description>This field is automatically populated via a formula. It automatically translates the Covenant Frequency into a numeric number (for example, Annually = 12).</description>
        <formula>IF( ISPICKVAL(LLC_BI__Frequency__c, &apos;Annually&apos;), 12,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Quarterly&apos;), 3,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Semi-Annually&apos;), 6,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Every 2 Months&apos;),2,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Monthly&apos;),1,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency__c</fullName>
        <description>This field is required and manually populated. This indicates how often the Covenant is required.</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defaults to false and is manually populated. This determines if a covenant is going to be used as a template.</description>
        <label>Is_Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Evaluation_Date__c</fullName>
        <description>This field is optional. It is automatically populated whenever covenant compliance records are updated to approved. It identifies the last date that a covenant record was reviewed.</description>
        <inlineHelpText>Date is automatically populated whenever Covenant Compliance records are updated to approved. It identifies the last date that a covenant record was reviewed.</inlineHelpText>
        <label>Last Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Evaluation_Status__c</fullName>
        <description>This field is optional. Last Evaluation Status populated from the Covenant Compliance record.</description>
        <inlineHelpText>Status is automatically populated by the Covenant Compliance record.</inlineHelpText>
        <label>Last Evaluation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Linked_Spread_Statement_Record_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and manually populated. The Spread Statement Record Total (group) this Financial Indicator Covenant is referencing for compliance.</description>
        <inlineHelpText>The Spread Statement Record Total (group) this Financial Indicator Covenant is referencing for compliance.</inlineHelpText>
        <label>Linked Spread Statement Record Total</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Covenant Mgmt</relationshipLabel>
        <relationshipName>Covenant_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Linked_Spread_Statement_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and manually populated. The Spread Statement Record (row) this Financial Indicator Covenant is referencing for compliance.</description>
        <inlineHelpText>The Spread Statement Record (row) this Financial Indicator Covenant is referencing for compliance.</inlineHelpText>
        <label>Linked Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Covenant Mgmt</relationshipLabel>
        <relationshipName>Covenant_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Evaluation_Date__c</fullName>
        <description>This field is optional. It is initially manually populated, but afterward, it is automatically populated whenever covenant compliance records are updated to approved. It identifies the next date that a covenant record should be reviewed.</description>
        <inlineHelpText>Date is originally set in the Covenant set-up wizard, but afterward, it is automatically populated whenever Covenant Compliance records are updated to approved. It identifies the next date that a covenant record should be reviewed.</inlineHelpText>
        <label>Next Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>This field is optional. It is manually populated. It is a text field which allows users to enter additional notes or information related to the covenant record.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Related_Covenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field allows covenants to be related to each other.</description>
        <inlineHelpText>This field is used to relate Financial Indicator covenants to Financial Statement Requirements covenants.  When a Financial Statement Requirement covenant goes into exception all of its related FI covenants are also set to Exception.</inlineHelpText>
        <label>Related Covenant</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Covenant Mgmt</relationshipLabel>
        <relationshipName>Covenant_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defaults to false and is manually populated. This field indicates whether or not a Covenant is required.</description>
        <inlineHelpText>This field indicates whether or not a Covenant is required.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for Covenant Mgmt object used by nCino Data Services.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Covenant Mgmt</relationshipLabel>
        <relationshipName>Covenant_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <label>isTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Covenant Mgmt</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COV-{000000}</displayFormat>
        <label>Covenant Mgmt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenant Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>